# comp_geom

./: README.md  pyproject.toml
notebooks/: test.ipynb
