[project]
name = "comp-geom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipydatawidgets==4.3.5",
    "ipykernel==6.21.2",
    "ipython==7.34.0",
    "ipywidgets==8.0.4",
    "jupyter==1.0.0",
    "jupyter-contrib-nbextensions==0.7.0",
    "jupyter-core==5.2.0",
    "jupyterlab==3.6.1",
    "jupyterlab-widgets==3.0.5",
    "notebook==6.5.2",
    "numpy>=2.2.2",
    "open3d>=0.19.0",
    "plotly>=6.0.0",
    "pythreejs==2.4.2",
    "torch>=2.5.1",
    "widgetsnbextension>=4.0.13",
]
